dev-portal-dns/resources/devportal-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: devportal
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - "apis.myddns.me"
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: dev-portal
              namespace: gloo-system
