dev-portal-dns/resources/glooui-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: glooui
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - "glooui.myddns.me"
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: apiserver-ui
              namespace: gloo-system
