dev-portal-dns/resources/petstore-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    options:
      cors:
        allowOrigin:
        - "http://apis.myddns.me"
    domains:
    - "petstore.myddns.me"
    routes:
    - matchers:
      - prefix: /api
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: petstore
              namespace: default
